# mcp-agentapi

./: .gitattributes  .gitignore  CONTRIBUTING.md  FILE_STRUCTURE.md  GITHUB_SETUP.md  MANIFEST.in  README.md  agent_cli.py  agentapi_mcp.py  build.sh  mcp-agentapi.json.example  mcp_inspector.sh  mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  server.py  setup.py
.github/workflows/: python-package.yml
docs/: CHANGELOG.md  MCP_INSPECTOR_USAGE.md  README.md  agent_manager.md  api_client.md  config.md  health_check.md  index.md  integration_guide.md  mcp_server_architecture.md  mcp_tools.md  multi_agent_orchestration.md  resource_manager.md  technical_design.md
mcp_agentapi/: __init__.py  agent_cli.py  cli.py  main.py  server.py  unified_cli.py
mcp_agentapi/src/: __init__.py
mcp_agentapi/src/utils/: __init__.py  error_handler.py
src/: __init__.py  agent_controller.py  agent_manager.py  api_client.py  cli.py  config.py  constants.py  context.py  event_emitter.py  exceptions.py  health_check.py  main.py  models.py  resource_manager.py
src/utils/: __init__.py  error_handler.py
tests/: README.md  conftest.py  test_agent_manager.py  test_api_client.py  test_basic.py  test_config.py  test_error_handler.py  test_exceptions.py  test_health_check.py  test_integration.py  test_models.py  test_resource_manager.py  test_server.py
